<resources>
    <string name="app_name">루틴 메이커</string>
    <string name="server_client_id">842164710617-j203js7pai1r7s31r8mggv340g4m4824.apps.googleusercontent.com</string>
    <string name="naver_client_id">Eqnzx3WTgu0UF1OckiJC</string>
    <string name="naver_client_secret">1yO6vhssgd</string>
    <string name="naver_client_name">루틴 메이커</string>
    <string name="s3_bucket_route">https://rtmaker.s3.ap-northeast-2.amazonaws.com/public/</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message" translatable="false">fcm_message</string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>
    <string name="qnaMail">seah.ahn.nt@gmail.com</string>
    <string name="qnaSubject">루틴 메이커 - 1:1 문의</string>
    <string name="qnaContent">
        &#127296; 문의\n
        문의하실 내용을 적어주세요 :)
    </string>
    <string name="email">이메일</string>
    <string name="emailph">이메일을 입력해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="pwph">비밀번호를 입력해주세요</string>
    <string name="pwguide">8–16자, 각 1개 이상의 영문 대소문자+숫자+특수문자</string>
    <string name="pwconfirm">비밀번호 확인</string>
    <string name="pwconfirmph">비밀번호를 한번 더 입력해주세요</string>
    <string name="nickname">닉네임</string>
    <string name="nicknameph">닉네임을 입력해주세요</string>
    <string name="nicknameguide">2~10자 이내, 공백 불가</string>
    <string name="checkExist">중복 확인</string>
    <string name="send">전송</string>
    <string name="next">다음</string>
    <string name="reSend">재전송</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="sendMail">인증 메일 보내기</string>
    <string name="verifynum">인증 번호</string>
    <string name="verifynumph">인증 번호 4자리를 입력해주세요</string>
    <string name="or">또는</string>
    <string name="signupAgree">루틴 메이커의 <a href="https://www.notion.so/c5d3ccca2d574331814c4b81a8c5caf1">이용약관</a> 및 <a
            href="https://www.notion.so/86e04fb287ce486f993b53792ce21981">개인정보처리방침</a>에 동의합니다.
    </string>
    <string name="signuptext1">환영합니다!</string>
    <string name="signuptext2">루틴과 함께 하는 보람찬 하루, \n준비되셨나요?</string>
    <string name="findpwtext1">비밀번호 찾기</string>
    <string name="findpwtext2">가입하신 이메일 주소를 인증해주세요.</string>
    <string name="findpwtext3">비밀번호 재설정을 잊지 마세요!</string>
    <string name="resetpwtext1">비밀번호 재설정</string>
    <string name="resetpwtext2">비밀번호를 재설정해주세요.</string>
    <string name="googleLogin">구글 아이디로 로그인</string>
    <string name="toolbarTitle">앱바 타이틀</string>
    <string name="toolbarFilter">필터</string>
    <string name="toolbarMore">더보기</string>
    <string name="toolbarList">목록</string>
    <string name="toolbarNoti">알림</string>
    <string name="toolbarSearch">검색</string>
    <string name="toolbarTrash">삭제</string>
    <string name="toolbarUpdate">수정</string>
    <string name="toolbarDay">일간</string>
    <string name="toolbarWeek">주간</string>
    <string name="toolbarMonth">월간</string>
    <string name="popupMenuUpdate">수정</string>
    <string name="popupMenuDelete">삭제</string>
    <string name="popupMenuGroupInfo">그룹 정보 보기</string>
    <string name="popupMenuGroupChat">그룹 채팅 참여하기</string>
    <string name="popupMenuGroupMemberList">그룹원 목록 보기</string>
    <string name="popupMenuGroupClgList">그룹 챌린지 목록 보기</string>
    <string name="popupMenuGroupUpdate">그룹 정보 수정</string>
    <string name="popupMenuGroupDelete">그룹 해체</string>
    <string name="popupMenuGroupApplicants">그룹 가입 신청자 목록 보기</string>
    <string name="popupMenuUnfollow">숨기기</string>
    <string name="btmHome">메인</string>
    <string name="btmStts">통계</string>
    <string name="btmGroup">그룹</string>
    <string name="btmNoti">알림</string>
    <string name="btmRt">루틴</string>
    <string name="btmChat">채팅</string>
    <string name="btmPf">프로필</string>
    <string name="homeRoutine">루틴</string>
    <string name="homeReview">회고</string>
    <string name="sttsGraph">그래프</string>
    <string name="sttsCount">통계</string>
    <string name="leftnavNick">닉네임</string>
    <string name="leftnavEmail">이메일 주소</string>
    <string name="leftnavMembership">현재 멤버십</string>
    <string name="mbsBasic">베이직</string>
    <string name="mbsPremium">프리미엄</string>
    <string name="notice">공지사항</string>
    <string name="faq">FAQ</string>
    <string name="qna">1:1 문의하기</string>
    <string name="writeReview">앱 리뷰 남기기</string>
    <string name="mypage">마이페이지</string>
    <string name="update">수정하기</string>
    <string name="level">레벨</string>
    <string name="title">타이틀</string>
    <string name="intro">자기소개</string>
    <string name="membership">멤버십</string>
    <string name="mbsApply">멤버십 신청하기</string>
    <string name="payrecord">결제 내역 보기</string>
    <string name="pwchange">비밀번호 변경하기</string>
    <string name="logout">로그아웃</string>
    <string name="exit">회원 탈퇴</string>
    <string name="takePhoto">사진 찍기</string>
    <string name="bringPhoto">사진 가져오기</string>
    <string name="deletePhoto">사진 지우기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todayReview">오늘의 회고</string>
    <string name="todayReviewHint">오늘 하루에 대해서 기록해보세요.</string>
    <string name="todayReviewOnFeed">공개 여부</string>
    <string name="save">저장하기</string>
    <string name="makeRt">루틴 만들기</string>
    <string name="updateRt">루틴 수정하기</string>
    <string name="makeTodo">할 일 만들기</string>
    <string name="updateTodo">할 일 수정하기</string>
    <string name="makeAction">행동 추가하기</string>
    <string name="updateAction">행동 수정하기</string>
    <string name="noRt">이 날은 루틴이 없어요</string>
    <string name="rt">rt</string>
    <string name="todo">todo</string>
    <string name="item_rt">RT</string>
    <string name="item_todo">ToDo</string>
    <string name="showAll">전체 목록 보기</string>
    <string name="done">완료한 할 일 삭제하기</string>
    <string name="rtTitle">루틴 제목</string>
    <string name="rtTitlePh">루틴의 제목을 입력해주세요</string>
    <string name="todoTitle">할 일 제목</string>
    <string name="todoTitlePh">할 일의 제목을 입력해주세요</string>
    <string name="actionTitle">행동 제목</string>
    <string name="actionTitlePh">수행할 행동의 제목을 입력해주세요</string>
    <string name="activateAlarm">시작 알람 활성화</string>
    <string name="activateTodoAlarm">알람 활성화</string>
    <string name="activateAlarmGuide">기기 알림이 비활성화 되어 있어 알람을 사용하실 수 없습니다.
        <u>설정하기</u>
    </string>
    <string name="repeat">반복 여부</string>
    <string name="startTime">수행 예정 시각</string>
    <string name="startDate">수행 예정일</string>
    <string name="costTime">예상 소요 시간</string>
    <string name="actionColor">표시 색상</string>
    <string name="rtOnFeed">그룹 피드에 공개하기</string>
    <string name="memo">메모</string>
    <string name="isPrivateReview">사용자가 비공개한 회고입니다.</string>
    <string name="isEmptyReview">작성된 내용이 없습니다.</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="titleEmpty">제목을 입력해주세요</string>
    <string name="daysEmpty">반복 요일을 최소 1개 선택해주세요</string>
    <string name="timecostEmpty">예상 소요 시간을 1분 이상으로 입력해주세요</string>
    <string name="dataEmpty">데이터가 없습니다</string>
    <string name="groupTitleEmpty">그룹명을 입력해주세요</string>
    <string name="groupHeadLimitEmpty">제한할 인원 수를 2 이상 입력해주세요</string>
    <string name="feedContentEmpty">피드 내용을 입력해주세요</string>
    <string name="totalRtNum">총 루틴 갯수</string>
    <string name="totalRtDoneNum">수행 완료 루틴</string>
    <string name="rtDoneRecord">루틴 수행 기록</string>
    <string name="doneOfTotal">총 루틴 수 / 수행 완료 루틴</string>
    <string name="recordArrowUp">▲</string>
    <string name="recordArrowDown">▼</string>
    <string name="totalTimeCost">총 소요 시간</string>
    <string name="totalMonthActionDoneNum">행동 수행 횟수</string>
    <string name="divider">/</string>
    <string name="tableDate">날짜</string>
    <string name="tableRtNum">갯수</string>
    <string name="tableRtDoneNum">한거</string>
    <string-array name="timetable_header">
        <item></item>
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string name="numCountUnit">개</string>
    <string name="humanCountUnit">명</string>
    <string name="startUnit">시작</string>
    <string name="weekPeriodUnit">주 동안</string>
    <string name="groupList">가입한 그룹 목록</string>
    <string name="groupInfo">그룹 정보</string>
    <string name="applicantList">그룹 가입 신청자 목록</string>
    <string name="memberList">그룹원 목록</string>
    <string name="acceptJoin">그룹 가입 신청 수락하기</string>
    <string name="searchGroup">그룹 찾기</string>
    <string name="makeGroup">그룹 만들기</string>
    <string name="updateGroup">그룹 정보 수정하기</string>
    <string name="joinGroup">그룹 가입하기</string>
    <string name="applyJoinGroup">그룹 가입 신청하기</string>
    <string name="cancelJoinGroup">그룹 가입 신청 취소하기</string>
    <string name="quitGroup">그룹 탈퇴하기</string>
    <string name="changeGroupLeader">그룹 리더 변경하기</string>
    <string name="deleteGroup">그룹 해체하기</string>
    <string name="groupTitle">그룹명</string>
    <string name="groupTitlePh">그룹의 이름을 정해주세요.</string>
    <string name="headLimit">인원 제한</string>
    <string name="headNumber">그룹 인원</string>
    <string name="isLocked">그룹 공개 여부</string>
    <string name="tags">태그</string>
    <string name="tagsPh">(띄어쓰기로 자동 구분)</string>
    <string name="explain">추가 설명</string>
    <string name="checkAll">전체 선택하기</string>
    <string name="makeFeedTitle">피드 작성</string>
    <string name="updateFeedTitle">피드 수정</string>
    <string name="searchFeedTitle">피드 검색</string>
    <string name="detailFeedTitle">피드 보기</string>
    <string name="makeFeed">피드 작성하기</string>
    <string name="updateFeed">피드 수정하기</string>
    <string name="makeSubCmt">답글 달기</string>
    <string name="cmtPh">댓글을 입력하세요</string>
    <string name="subCmtPh">님에게 답글 남기기</string>
    <string name="subCmtInfo">님에게 답글 남기는 중</string>
    <string name="chatPh">메시지를 입력하세요</string>
    <string name="searchPh">검색어를 입력해주세요</string>
    <string name="showOnlyMyFeed">내 피드만 보기</string>
    <string name="joinPh">신청자의 닉네임 검색하기</string>
    <string name="feedPh">어떤 하루를 보내고 계신가요?</string>
    <string name="selectNextLeaderTitle">새로운 그룹 리더 정하기</string>
    <string name="selectNextLeaderMsg">새로운 그룹 리더를 선택해주세요</string>
    <string name="acceptJoinImpMsg">가입 가능한 인원을 초과하였습니다</string>
    <string name="acceptJoinMsg">가입을 수락하였습니다</string>
    <string name="maxThirtyPics">최대 30장 선택 가능</string>
    <string name="maxFivePics">최대 5장 선택 가능</string>
    <string name="maxOnePic">최대 1장 선택 가능</string>
    <string name="maxThirtyPicsWarning">최대 30장까지 선택 가능합니다</string>
    <string name="maxFivePicsWarning">최대 5장까지 선택 가능합니다</string>
    <string name="maxOnePicWarning">최대 1장까지 선택 가능합니다</string>
    <string name="chatList">채팅 목록</string>
    <string name="chatIn">님이 입장하셨습니다</string>
    <string name="chatOut">님이 퇴장하셨습니다</string>
    <string name="makeClg">챌린지 만들기</string>
    <string name="updateClg">챌린지 수정하기</string>
    <string name="clgInfo">챌린지 정보</string>
    <string name="makeClgTitle">챌린지 만들기</string>
    <string name="updateClgTitle">챌린지 수정</string>
    <string name="clgFeedListTitle">챌린지 수행 인증 피드</string>
    <string name="makeClgFeed">챌린지 수행 인증하기</string>
    <string name="makeClgFeedTitle">챌린지 수행 인증</string>
    <string name="updateClgFeed">챌린지 수행 인증 수정하기</string>
    <string name="updateClgFeedTitle">챌린지 수행 인증 수정</string>
    <string name="clgTitle">챌린지명</string>
    <string name="clgTitlePh">챌린지의 이름을 정해주세요</string>
    <string name="topic">주제</string>
    <string name="period">기간</string>
    <string name="certFrequency">인증 빈도</string>
    <string name="certDays">인증 가능 요일</string>
    <string name="certNum">하루 인증 횟수</string>
    <string name="certTime">인증 가능 시간</string>
    <string name="certWay">인증 방법</string>
    <string name="clgMemo">추가 설명</string>
</resources>