<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/info"
            android:title="@string/popupMenuGroupInfo"/>
    <group android:id="@+id/group_in">
        <item
                android:id="@+id/chat"
                android:title="@string/popupMenuGroupChat"/>
        <item
                android:id="@+id/memberList"
                android:title="@string/popupMenuGroupMemberList"/>
        <item
                android:id="@+id/clgList"
                android:title="@string/popupMenuGroupClgList"/>
    </group>
    <group android:id="@+id/group_manage">
        <item
                android:id="@+id/update"
                android:title="@string/popupMenuGroupUpdate"/>
    </group>
    <group android:id="@+id/group_applicant">
        <item
                android:id="@+id/applicants"
                android:title="@string/popupMenuGroupApplicants"/>
    </group>
<!--    <item-->
<!--            android:id="@+id/delete"-->
<!--            android:title="@string/popupMenuGroupDelete"/>-->
</menu>