<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".user.SignUpActivity">
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp" app:srcCompat="@drawable/ic_launcher_background"
                android:background="#2699FB"
                android:id="@+id/headerimage"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />
        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp" app:srcCompat="@drawable/backward_arrow" android:id="@+id/goback"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="14dp" android:layout_marginTop="12dp"/>
        <TextView
                android:text="@string/signuptext1"
                android:textSize="27sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:layout_marginStart="14dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp"/>
        <TextView
                android:text="@string/signuptext2"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginStart="14dp"/>

        <TextView
                android:text="@string/email"
                style="@style/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvMainTitle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
                android:layout_marginEnd="314dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerimage"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="@string/emailph"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="40dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvMainTitle"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="40dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/inputPlaceholder"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/checkExist"
                android:layout_width="wrap_content"
                android:layout_height="56dp" android:id="@+id/checkemail" android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp" app:layout_constraintTop_toTopOf="@+id/email"
                app:layout_constraintBottom_toBottomOf="@+id/email" android:layout_marginTop="2dp"/>

        <TextView
                android:text="@string/pw"
                style="@style/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvVerifynum"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="58dp" android:layout_marginEnd="295dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwguide"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tvVerifynum" android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwInput"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/inputPlaceholder"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/pwconfirm"
                style="@style/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="58dp"
                app:layout_constraintTop_toBottomOf="@+id/pw" android:layout_marginEnd="260dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pwconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwconfirmph"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwconfirmInput"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/inputPlaceholder"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:text="@string/nickname"
                style="@style/inputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="58dp" android:layout_marginEnd="295dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pwconfirm"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nicknameph"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="40dp" android:layout_marginEnd="40dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="8dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nickInput"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    style="@style/inputPlaceholder"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:text="@string/checkExist"
                android:layout_width="wrap_content"
                android:layout_height="56dp" android:id="@+id/checknick" android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="40dp" app:layout_constraintTop_toTopOf="@+id/nickname"
                app:layout_constraintBottom_toBottomOf="@+id/nickname" android:layout_marginTop="5dp"/>

        <CheckBox
                android:textSize="12sp"
                android:layout_width="32dp"
                android:layout_height="32dp" android:id="@+id/checkBox"
                app:layout_constraintTop_toBottomOf="@+id/nickname" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/signupagree"
                android:textSize="12sp"
                style="@style/inputHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signupAgree"
                app:layout_constraintTop_toTopOf="@+id/checkBox"
                app:layout_constraintStart_toEndOf="@+id/checkBox"
                app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        />
        <Button
                android:text="@string/signup"
                android:layout_width="300dp"
                android:layout_height="50dp" android:id="@+id/signupBtn"
                style="@style/distS"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
