<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".user.FindpwActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp" app:srcCompat="@drawable/ic_launcher_background"
            android:background="#2699FB"
            android:id="@+id/headerimage"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp" app:srcCompat="@drawable/backward_arrow" android:id="@+id/goback"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp" android:layout_marginTop="12dp"/>
    <TextView
            android:text="@string/findpwtext1"
            android:textSize="27sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:layout_marginStart="14dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="44dp"/>
    <TextView
            android:text="@string/findpwtext2"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginStart="14dp" android:layout_marginTop="16dp"/>

    <ScrollView android:id="@+id/scrollview"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/headerimage">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/email"
                    style="@style/inputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
                    android:layout_marginEnd="314dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailph"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/inputPlaceholder"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:text="@string/send"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp" android:id="@+id/sendbtn" android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp" app:layout_constraintTop_toTopOf="@+id/email"
                    app:layout_constraintBottom_toBottomOf="@+id/email" android:layout_marginTop="4dp"/>

            <TextView
                    android:visibility="gone"
                    android:text="@string/verifynum"
                    style="@style/inputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
                    android:layout_marginEnd="314dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/verifynum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verifynumph"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="250dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:visibility="gone"
                        android:id="@+id/verifynumInput"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        style="@style/inputPlaceholder"
                />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:visibility="gone"
                    android:text="time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/time" android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="@+id/verifynum"
                    app:layout_constraintEnd_toEndOf="@+id/verifynum" android:layout_marginEnd="4dp"
                    app:layout_constraintTop_toTopOf="@+id/verifynum" android:layout_marginTop="2dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
<androidx.appcompat.widget.AppCompatButton
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="50dp" android:id="@+id/nextBtn"
        style="@style/btn"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
/>
</androidx.constraintlayout.widget.ConstraintLayout>
